test/expected/declare_rv.out
declare x as reference to void
        ^
9: error: reference to "void" is illegal; did you mean pointer to void?
